--- a/Tutorial - Prototyp/views/kommentarliste.jade
+++ b/Tutorial - Prototyp/views/kommentarliste.jade
@@ -3,10 +3,12 @@ extends layout
 block content
 	h1.
 		KOMMENTARLISTE
-	ul
+	table(border="1", style = "max-width: 75%;")
 		each kommentar, i in kommentarliste
-			li
-				test
-	form#formAddKommentar(name="addkommentar",method="post",action="/addkommentar")
+			tr
+				td
+					p()= kommentar.kommentar
+	form#formAddKommentar(
+	name="addkommentar",method="post",action="/addkommentar")
 		textarea#textareaKommentar(style = "resize: none;", type="text", placeholder="Kommentar", name="kommentar", rows ="10", cols="52")
 		button#btnSubmit(type="submit") Einreichen
