--- a/LernPlattform_2/views/wba2.jade
+++ b/LernPlattform_2/views/wba2.jade
@@ -14,5 +14,5 @@ block content
 
 	table#wba2_material_table
 		td
-			a(href="http://localhost:3000/material1") Material 1
+			a(href="http://localhost:3000/wba2/material1") Material 1
 
