--- a/LernPlattformEntgültig/views/cgamaterial1.jade
+++ b/LernPlattformEntgültig/views/cgamaterial1.jade
@@ -6,7 +6,7 @@ block content
 		Navigation
 	form#formnavleiste(name="navleiste")
 		button#btnHome(type="submit", formaction="http://localhost:3000/home") Home
-		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/cga") Module
+		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/cga") Modul CGA
 
 	h1.
 		Material1
