--- a/LernPlattformEntgültig/views/wba2material1.jade
+++ b/LernPlattformEntgültig/views/wba2material1.jade
@@ -6,7 +6,20 @@ block content
 		Navigation
 	form#formnavleiste(name="navleiste")
 		button#btnHome(type="submit", formaction="http://localhost:3000/home") Home
-		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/wba2") Module
+		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/wba2") Modul WBA2
+
+	aside
+		p ABONNIEREN!
+			input#aboCheckbox(name="aboCheckbox", type="checkbox")
+		h3.
+			Ticker
+
+		#Ticker
+			table
+				thead
+					th Aktualisierungen
+				tbody
+
 
 	h1.
 		Material1
