--- a/LernPlattformEntgültig/views/cgamaterial1.jade
+++ b/LernPlattformEntgültig/views/cgamaterial1.jade
@@ -8,6 +8,18 @@ block content
 		button#btnHome(type="submit", formaction="http://localhost:3000/home") Home
 		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/cga") Modul CGA
 
+	aside
+		p ABONNIEREN!
+			input#aboCheckboxCGA(name="aboCheckboxCGA", type="checkbox")
+		h3.
+			Ticker
+
+		#Ticker
+			table
+				thead
+					th Aktualisierungen
+				tbody
+
 	h1.
 		Material1
 
