--- a/LernPlattformEntgültig/views/layout.jade
+++ b/LernPlattformEntgültig/views/layout.jade
@@ -3,6 +3,9 @@ html
 	head
 		title= title
 		link(rel='stylesheet', href='/stylesheets/style.css')
-
+		script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
+		script(src='http://code.jquery.com/ui/1.10.4/jquery-ui.js')
+		script(type='text/javascript' src='/faye/client.js')
+		script(src='/javascripts/global.js')
 	body
 		block content
