--- a/LernPlattformEntgültig/views/wba2material1.jade
+++ b/LernPlattformEntgültig/views/wba2material1.jade
@@ -10,7 +10,7 @@ block content
 
 	aside
 		p ABONNIEREN!
-			input#aboCheckbox(name="aboCheckbox", type="checkbox")
+			input#aboCheckboxWBA2(name="aboCheckboxWBA2", type="checkbox")
 		h3.
 			Ticker
 
