--- a/LernPlattformEntgültig/public/stylesheets/style.css
+++ b/LernPlattformEntgültig/public/stylesheets/style.css
@@ -1,13 +1,46 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+	text-decoration: none;
 }
 
-#kommentartabelle{
+#kommentartabelle {
 	min-width: 60%;
 	max-width: 60%; 
+}
+
+#Ticker {
+	text-align: center;
+}
+
+#Ticker p{
+	font-weight: bold;
+}
+
+h1 {
+	position: static;
+	font-size: 60px;
+	text-align: center;
+	background-color: orange;
+	color: white;
+}
+
+aside {
+	position: fixed;
+    color: black;
+    text-align: right;
+    font-size: 12px;
+    left: 80%;
+    top: 15%;
+}
+
+#seitenleiste {
+	position: absolute;
+	background-color: lightblue;
+	width: 220px;
+	top: 0;
+	bottom: 0;
+	left: 78%;
 }
