--- a/LernPlattformEntgültig/views/cgamaterial1.jade
+++ b/LernPlattformEntgültig/views/cgamaterial1.jade
@@ -1,27 +1,13 @@
 extends layout
 
 block content
-	h1= title
-	h3.
-		Navigation
+	h1.
+		Material 1
+
 	form#formnavleiste(name="navleiste")
 		button#btnHome(type="submit", formaction="http://localhost:3000/home") Home
-		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/cga") Modul CGA
-
-	aside
-		p ABONNIEREN!
-			input#aboCheckboxCGA(name="aboCheckboxCGA", type="checkbox")
-		h3.
-			Ticker
-
-		#Ticker
-			table
-				thead
-					th Aktualisierungen
-				tbody
-
-	h1.
-		Material1
+		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/wba2") Modul WBA 2
+		button#btnCGA(type="submit", formaction="http://localhost:3000/home/cga") Modul CGA
 
 	p
 		img(border="1", src='http://www.fotos-hochladen.net/view/prsiwba2005xgh324yal9.jpg', width="60%", alt='bild')
