--- a/LernPlattformEntgültig/views/layout.jade
+++ b/LernPlattformEntgültig/views/layout.jade
@@ -8,4 +8,17 @@ html
 		script(type='text/javascript' src='/faye/client.js')
 		script(src='/javascripts/global.js')
 	body
-		block content
+
+	div#seitenleiste
+
+	aside
+		p cga material 1 abonniert
+			input#aboCheckboxCGA(name="aboCheckboxCGA", type="checkbox")
+		p wba 2 material 1 abonniert
+			input#aboCheckboxWBA2(name="aboCheckboxWBA2", type="checkbox")
+		#Ticker
+			p Aktualisierungen
+			table
+				tbody
+		
+	block content
