--- a/LernPlattformEntgültig/views/home.jade
+++ b/LernPlattformEntgültig/views/home.jade
@@ -1,9 +1,29 @@
 extends layout
 
 block content
+
+	h3.
+		Navigation
+	form#formnavleiste(name="navleiste")
+		button#btnLogout(type="submit", formaction="/") Logout
+
 	h1= title
 
-	form#formnavleiste(name="navleiste")
-		button#btnHome(type="submit", formaction="http://localhost:3000/home") Home
-		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/wba2") Modul WBA 2
-		button#btnCGA(type="submit", formaction="http://localhost:3000/home/cga") Modul CGA
+	aside#sidebar
+		p Keine änderung verpassen :
+			input#aboCheckboxHOME(name="aboCheckboxHOME", type="checkbox")
+
+		#Ticker
+			table
+				thead
+					th Aktualisierungen
+				tbody
+
+
+	table#homeTable
+		tr
+			td 
+				a(href="http://localhost:3000/home/wba2") WBA2
+		tr
+			td
+				a(href="http://localhost:3000/home/cga") CGA
