--- a/LernPlattformEntgültig/views/wba2.jade
+++ b/LernPlattformEntgültig/views/wba2.jade
@@ -1,14 +1,15 @@
 extends layout
 
 block content
+
+	h3.
+		Navigation
+	form#formnavleiste(name="navleiste")
+		button#btnZurueck(type="submit", formaction="/home") Zurück
+		button#btnLogout(type="submit", formaction="/") Logout
+
 	h1= title
 
-	form#formnavleiste(name="navleiste")
-		button#btnHome(type="submit", formaction="http://localhost:3000/home") Home
-		button#btnWBA2(type="submit", formaction="http://localhost:3000/home/wba2") Modul WBA 2
-		button#btnCGA(type="submit", formaction="http://localhost:3000/home/cga") Modul CGA
-	br
-	br
 	table#wba2MaterialTable
 		tr
 			td 
