Anmeldung etc+ Feinheiten

--- a/LernPlattformEntgültig/views/cga.jade
+++ b/LernPlattformEntgültig/views/cga.jade
@@ -13,4 +13,4 @@ block content
 	table#wba2MaterialTable
 		tr
 			td 
-				a(href="http://localhost:3000/home/wba2/material1") Material 1
+				a(href="http://localhost:3000/home/cga/material1") Material 1
