--- a/LernPlattformEntgültig/views/login.jade
+++ b/LernPlattformEntgültig/views/login.jade
@@ -3,8 +3,7 @@ extends layout
 block content
 	h1= title
 
-	table#loginTable
-		tr
-			td 
-				form#formLogin(name="formLogin")
-					button#btnLogin(type="submit", formaction="/home") Einloggen
+	#formLogin
+		form(name="formLogin")
+			input#inputAddUsr(type="text", name="inputAddUsr", placeholder="Username")
+			button#btnLogin Einloggen
