--- a/LernPlattformEntgültig/views/cgamaterial1.jade
+++ b/LernPlattformEntgültig/views/cgamaterial1.jade
@@ -12,16 +12,17 @@ block content
 	h1.
 		Material1 CGA: Was genau ist CGA?
 
-	aside#sidebar
 
-		#Bewertung
-			table
-				thead
-					th Bewerten? Gib eine Zahl zwischen 1 und 10 an (1: Schlecht, 10: Sehr Gut) 
-					th
-						form#formBewertung(name="formBewertung")
-							input#inputBewertung(type="text", name="inputBewertung", placeholder="Deine Bewertung")
-							button#btnBewertung(type="submit", name="btnBewertung") Bewertung abschicken
+	#Bewertung
+		table
+			thead
+				th Bewerten? Gib eine Zahl zwischen 1 und 10 an (1: Schlecht, 10: Sehr Gut) 
+				th
+					form#formBewertung(name="formBewertung")
+						input#inputBewertung(type="text", name="inputBewertung", placeholder="Deine Bewertung")
+						button#btnBewertungCgaMat1(type="submit", name="btnBewertungCgaMat1") Bewertung abschicken
+
+	aside#sidebar
 
 		#Subscribe
 			fieldset
