--- a/LernPlattformEntgültig/views/wba2.jade
+++ b/LernPlattformEntgültig/views/wba2.jade
@@ -10,6 +10,13 @@ block content
 
 	h1= title
 
+	aside#sidebar
+		#Ticker
+			table
+				thead
+					th Aktualisierungen
+				tbody
+
 	table#wba2MaterialTable
 		tr
 			td 
