--- a/LernPlattformEntgültig/views/cga.jade
+++ b/LernPlattformEntgültig/views/cga.jade
@@ -10,6 +10,14 @@ block content
 
 	h1= title
 
+	aside#sidebar
+
+		#Ticker
+			table
+				thead
+					th Aktualisierungen
+				tbody
+
 	table#wba2MaterialTable
 		tr
 			td 
