--- a/LernPlattformEntgültig/views/cgamaterial1.jade
+++ b/LernPlattformEntgültig/views/cgamaterial1.jade
@@ -13,14 +13,18 @@ block content
 		Material1 CGA: Was genau ist CGA?
 
 
-	#Bewertung
-		table
-			thead
-				th Bewerten? Gib eine Zahl zwischen 1 und 10 an (1: Schlecht, 10: Sehr Gut) 
-				th
-					form#formBewertung(name="formBewertung")
-						input#inputBewertung(type="text", name="inputBewertung", placeholder="Deine Bewertung")
-						button#btnBewertungCgaMat1(type="submit", name="btnBewertungCgaMat1") Bewertung abschicken
+	#BewertungCgaMat1
+		div
+			form#formBewertung(name="formBewertung")
+							input#inputBewertung(type="text", name="inputBewertung", placeholder="Deine Bewertung")
+							button#btnBewertungCgaMat1 Bewertung abschicken
+			p Bewerten? Gib eine Zahl zwischen 1 und 10 an (1: Schlecht, 10: Sehr Gut) 
+
+			table(border="1")
+				thead
+					th Anzahl der Stimmen:
+					th Durchschnitt:
+				tbody
 
 	aside#sidebar
 
