--- a/LernPlattformEntgültig/views/wba2material1.jade
+++ b/LernPlattformEntgültig/views/wba2material1.jade
@@ -13,14 +13,19 @@ block content
 		Material1 WBA2: Ressourcen und Topics
 
 
-	#Bewertung
-		table
-			thead
-				th Bewerten? Gib eine Zahl zwischen 1 und 10 an (1: Schlecht, 10: Sehr Gut) 
-				th
-					form#formBewertung(name="formBewertung")
-						input#inputBewertung(type="text", name="inputBewertung", placeholder="Deine Bewertung")
-						button#btnBewertungWba2Mat1(type="submit", name="btnBewertungWba2Mat1") Bewertung abschicken
+	#BewertungWba2Mat1
+		div
+			form#formBewertung(name="formBewertung")
+							input#inputBewertung(type="text", name="inputBewertung", placeholder="Deine Bewertung")
+							button#btnBewertungWba2Mat1 Bewertung abschicken
+			p Bewerten? Gib eine Zahl zwischen 1 und 10 an (1: Schlecht, 10: Sehr Gut) 
+
+			table(border="1")
+				thead
+					th Anzahl der Stimmen:
+					th Durchschnitt:
+				tbody
+						
 
 	aside#sidebar
 				
