--- a/ENTGÜLTIG/views/cga.jade
+++ b/ENTGÜLTIG/views/cga.jade
@@ -12,9 +12,10 @@ block content
 				a(href="http://localhost:3000/home/CGA") CGA
 			div#logoutbtn(href="http://localhost:3000")
 				a(href="http://localhost:3000") LOGOUT
-	h1= title
+	section#content
+		h1= title
 
-	table#wba2MaterialTable
-		tr
-			td 
-				a(href="http://localhost:3000/home/cga/material1") Material 1
+		table#wba2MaterialTable
+			tr
+				td 
+					a(href="http://localhost:3000/home/cga/material1") Material 1
