--- a/ENTGÜLTIG/public/stylesheets/style.css
+++ b/ENTGÜLTIG/public/stylesheets/style.css
@@ -35,12 +35,13 @@ body {
 
 a {
 	text-decoration: none;
-	color: #909084;
+	color:black;
 }
 
 #balkenunten a {
 	position: relative;
 	top: 15px;
+	color: #909084;
 }
 
 #balkenunten div:hover{
@@ -119,13 +120,14 @@ a {
 
 #inputAddUsr {
 	position: absolute;
+	top:130px;
 	right: 50%;
 	left: 50%;
 }
 
 #btnLogin {
 	position:absolute;
-	margin-top:4px;
+	top:130px;
 	right: 50%;
 	background-color: black;
 	color: white;
@@ -134,6 +136,26 @@ a {
 #kommentartabelle {
 	min-width: 60%;
 	max-width: 60%; 
+	background-color: white;
+}
+
+#content{
+	text-align: left;
+	position:absolute;
+	margin-left: 200px;
+	margin-top: 10px;
+}
+
+#content h3{
+	text-decoration: underline;
+}
+
+#BewertungWba2Mat1 table{
+	background-color: white;
+}
+
+#BewertungCgaMat1 table{
+	background-color: white;
 }
 
 /*Ticker, Bewertung*/
@@ -142,7 +164,6 @@ aside {
     color: black;
     text-align: right;
     font-size: 12px;
-    right:;
     left: 85%;
     top: 27%;
 }
@@ -162,6 +183,4 @@ aside {
     position:relative;
     width: 500px;
     top: 50%;
-    
-
-}
+ }
