--- a/ENTGÜLTIG/views/home.jade
+++ b/ENTGÜLTIG/views/home.jade
@@ -14,11 +14,17 @@ block content
 			div#logoutbtn(href="http://localhost:3000")
 				a(href="http://localhost:3000") LOGOUT
 	
-	table#homeTable
-		tr
-			td 
-				a(href="http://localhost:3000/home/wba2") WBA2
-		tr
-			td
-				a(href="http://localhost:3000/home/cga") CGA
+	aside#sidebar
+		#Ticker
+			table
+				thead
+					th Aktualisierungen
+				tbody
+	section#content
+		h1.
+			Deine Module
+		h3
+			a(href="http://localhost:3000/home/wba2") WBA2
+			br
+			a(href="http://localhost:3000/home/cga") CGA
 	
